# jupyter_anywidget_tesseract_pdfjs

./: .gitignore  BUILD.md  README.md  example.ipynb  package.json  pyproject.toml
examples/: helper_demos.ipynb  tesseract_examples.ipynb
js/: tesseract.css  tesseract.html  tesseract.js  uuid.js  widget.css  widget.js
src/jupyter_anywidget_tesseract_pdfjs/: __init__.py  magics.py  utils.py
