[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter_anywidget_tesseract_pdfjs"
version = "0.0.5"
dependencies = ["anywidget", "puremagic"]
readme = "README.md"
authors = [
    {name = "Tony Hirst", email = "tony.hirst@gmail.com"},
]

[project.urls]
repository = "https://github.com/innovationOUtside/jupyter_anywidget_tesseract_pdfjs"

[project.license]
text = "Apache License"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/jupyter_anywidget_tesseract_pdfjs/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = []
skip-if-exists = []
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
